After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660674 - Workspace indicator problems.
Workspace indicator problems.
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-02 07:26 UTC by Tomas Sironi
Modified: 2011-10-04 20:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
st-theme-node-drawing: Fix centering when the image needs to be scaled (1.21 KB, patch)
2011-10-02 16:58 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Tomas Sironi 2011-10-02 07:26:24 UTC
When using a lot of workspaces, the arrow in the workspace indicator, tend to get to the left, when it should be smaller and centered.

I've attached a screenshot of the issue. I think it may happen easily on small screens.

Regards.
Comment 1 drago01 2011-10-02 08:29:07 UTC
There is no screenshot ...
Comment 2 Tomas Sironi 2011-10-02 16:04:08 UTC
Well, I've uploaded it as attachment, but it's not here.

Here is a link: http://i.imgur.com/32fHl.png
Comment 3 Jasper St. Pierre (not reading bugmail) 2011-10-02 16:53:59 UTC
OK, I misunderstood "workspace indicator". There's an extension with the same name.
Comment 4 Jasper St. Pierre (not reading bugmail) 2011-10-02 16:58:49 UTC
Created attachment 198028 [details] [review]
st-theme-node-drawing: Fix centering when the image needs to be scaled

The translate coordinates are calculated as the offset after the scale, so it
needs to be applied after the scale as well. This fixes random centering issues
in the UI.


Fixes it for me.
Comment 5 Jasper St. Pierre (not reading bugmail) 2011-10-04 20:27:04 UTC
Attachment 198028 [details] pushed as 0ccb280 - st-theme-node-drawing: Fix centering when the image needs to be scaled


Pushed after an IRC review by Adel.